--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "supertest": "^6.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
