--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
     "supertest": "^6.1.3"
   },
