--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "firebase-admin": "^9.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "supertest": "^6.1.3"
   },
   "devDependencies": {
