change post service to include ImageModel

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 JWT_SECRET="IDSP2"
 PORT=8000
+AWS_ACCESS_KEY_ID=AKIAVMTWGG6E36IPL6OS
+AWS_SECRET_ACCESS_KEY=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
