--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/kjohnathan/idsp2#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.14.0",
     "@babel/preset-typescript": "^7.13.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
