--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.14.0",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/nodemailer": "^6.4.1",
+    "@types/nodemailer-sendgrid": "^1.0.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -33,6 +35,9 @@
     "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.0",
+    "nodemailer-sendgrid": "^1.0.3",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "supertest": "^6.1.3"
