--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.14.0",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/mongodb": "^3.6.12",
     "@types/nodemailer": "^6.4.1",
     "@types/nodemailer-sendgrid": "^1.0.0",
     "bcrypt": "^5.0.1",
