--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/mongodb": "^3.6.12",
     "@types/nodemailer": "^6.4.1",
     "@types/nodemailer-sendgrid": "^1.0.0",
+    "@types/socket.io": "^2.1.13",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -41,6 +42,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.1.0",
     "supertest": "^6.1.3"
   },
   "devDependencies": {
