--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn server.ts",
     "deploy": "sh deploy.sh",
+    "deployChatApp": "sh deployChatApp.sh",
     "testLogin": "npx jest ./testing/login.test.js",
     "testSignup": "npx jest ./testing/signup.test.ts"
   },
