--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "firebase-admin": "^9.6.0",
+    "ioredis": "^4.27.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "morgan": "^1.10.0",
